{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 329,
  "lineage": "69552d03-1c05-eaff-574f-29c6f1e6b32e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "wp-fire",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-11-19T08:14:43.769-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/progetto-test55/global/firewalls/wp-firewall",
            "log_config": [],
            "name": "wp-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/networks/wp-network",
            "priority": 1000,
            "project": "progetto-test55",
            "self_link": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/firewalls/wp-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.wp-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "wp-fire-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-19T08:14:43.814-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/progetto-test55/global/firewalls/db-firewall",
            "log_config": [],
            "name": "db-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/networks/wp-network",
            "priority": 1000,
            "project": "progetto-test55",
            "self_link": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/firewalls/db-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.wp-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.34.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-19T08:14:43.910-08:00",
            "id": "projects/progetto-test55/global/addresses/private-ip-block",
            "name": "private-ip-block",
            "network": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/networks/wp-network",
            "prefix_length": 20,
            "project": "progetto-test55",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/addresses/private-ip-block"
          },
          "dependencies": [
            "google_compute_network.wp-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211115",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/progetto-test55/zones/us-central1-b/disks/wp-ser"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/progetto-test55/zones/us-central1-b/instances/wp-ser",
            "instance_id": "1427720052353428081",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "o1qFVH__lCs=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo apt update \u0026\u0026 apt upgrade -y\nsudo apt install apache2 -y\nsudo systemctl status apache2\nsudo apt install php php-mysql mysql-client php-curl php-gd php-xml php-xmlrpc php-zip -y\nsudo systemctl restart apache2\n\n\n\n\ncd  /tmp \u0026\u0026 wget https://wordpress.org/latest.tar.gz\nsudo tar -xvf latest.tar.gz\nsudo cp -R wordpress /var/www/html/\nsudo chown -R www-data:www-data /var/www/html/wordpress/\nsudo chmod -R 755 /va [...]
            "name": "wp-ser",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.4.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/networks/wp-network",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/progetto-test55/regions/us-central1/subnetworks/wp-network",
                "subnetwork_project": "progetto-test55"
              }
            ],
            "project": "progetto-test55",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/progetto-test55/zones/us-central1-b/instances/wp-ser",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_global_address.private_ip_block",
            "google_compute_network.wp-net",
            "google_service_networking_connection.private-conn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "wp-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/progetto-test55/global/networks/wp-network",
            "name": "wp-network",
            "project": "progetto-test55",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/networks/wp-network"
          }
        }
      ]
    },
    {
      "module": "module.gcp-network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/k8s-subnet-prod",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-19T08:14:35.238-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/progetto-test55/regions/us-central1/subnetworks/k8s-subnet-prod",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "k8s-subnet-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/networks/k8s-network-prod",
            "private_ip_google_access": false,
            "project": "progetto-test55",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "ip-range-pods"
              },
              {
                "ip_cidr_range": "10.30.0.0/16",
                "range_name": "ip-range-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/progetto-test55/regions/us-central1/subnetworks/k8s-subnet-prod"
          },
          "dependencies": [
            "module.gcp-network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/progetto-test55/global/networks/k8s-network-prod",
            "name": "k8s-network-prod",
            "project": "progetto-test55",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/progetto-test55/global/networks/k8s-network-prod"
          }
        }
      ]
    }
  ]
}